feat: introduces /health/backing-services route
This checks the services ari-proxy depends on to run

Co-authored-by: Jöran Vinzens <vinzens@sipgate.de>